# jenkins-jobs-factory

./: .env.local  .gitignore  LICENSE  README.md  jobs.yml.example  pyproject.toml
src/jenkins_job_factory/: client.py  config.py  main.py  xml_templates.py
