[project]
name = "jenkins-job-factory"
version = "0.1.0"
license = "MIT"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "car7os", email = "carlos.vazquez@qualtop.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]

[project.scripts]
jjf = "jenkins_job_factory.main:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"
